Headers for new API

--- a/Misc/stable_abi.toml
+++ b/Misc/stable_abi.toml
@@ -2342,3 +2342,12 @@
     added = '3.12'  # Before 3.12, available in "structmember.h" w/o Py_ prefix
 [const.Py_AUDIT_READ]
     added = '3.12'  # Before 3.12, available in "structmember.h"
+
+[function.PyObject_GetTypeData]
+    added = '3.12'
+[function.PyObject_GetTypeDataSize]
+    added = '3.12'
+[const.Py_tp_inherit_itemsize]
+    added = '3.12'
+[const.Py_RELATIVE_OFFSET]
+    added = '3.12'
