--- a/Misc/stable_abi.toml
+++ b/Misc/stable_abi.toml
@@ -2347,7 +2347,7 @@
     added = '3.12'
 [function.PyObject_GetTypeDataSize]
     added = '3.12'
-[const.Py_slot_inherit_itemsize]
-    added = '3.12'
 [const.Py_RELATIVE_OFFSET]
+    added = '3.12'
+[const.Py_TPFLAGS_ITEMS_AT_END]
     added = '3.12'
